[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/attacks/AttackArea.gd" type="Script" id=1]

[node name="AttackArea" type="Area2D"]
script = ExtResource( 1 )

[node name="AttackAnimation" type="AnimatedSprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
[connection signal="body_entered" from="." to="." method="_on_AttackArea_body_entered"]
[connection signal="animation_finished" from="AttackAnimation" to="." method="_on_AttackAnimation_animation_finished"]
